tests/baselines/reference/parserRegularExpression3.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression3.ts] ////

parserRegularExpression3.ts(1,1): error TS2304: Cannot find name 'Foo'.


==== parserRegularExpression3.ts (1 errors) ====
    Foo(!/(\\?|&)adurl=/);
    ~~~
!!! error TS2304: Cannot find name 'Foo'.